src/test/deca/syntax/valid/provided/class_with_methode.deca
class A{

  protected int c ;
  protected int b ;

 int getc(){
    return c ;
}

 void setb(int b) {
   this.b = 1 ;
}
}


 
