src/test/deca/syntax/invalid/provided/methode_in_main.deca
//class test{
//  protected float a = 1.6;
//  }
{

void setX(int x) {
}
}
